Fix Android session persistence compatibility